grammar_to_ply/error_msgs.txt
../programs/c/functions/output_programs/errors/floatsum_3adderror.c:1:2: error: unknown type name 'Unknown'
 Unknown errnode found  Unknown errnode found  Unknown errnode found 
 ^
../programs/c/functions/output_programs/errors/floatsum_3adderror.c:1:17: error: expected ';' after top level declarator
 Unknown errnode found  Unknown errnode found  Unknown errnode found 
                ^
                ;
2 errors generated.
